# drumstick-rt-outoftree

./: CMakeLists.txt  README.md  dummyinput.cpp  dummyinput.h  dummyoutput.cpp  dummyoutput.h
